# infrahub-bundle-dc

./: .env.example  .gitignore  .infrahub.yml  .markdownlint.yaml  .markdownlintignore  AGENTS.md  CLAUDE.md  LICENSE.txt  README.md  docker-compose.override.yml  pyproject.toml  tasks.py
.github/: file-filters.yml
.github/workflows/: ci.yml  update-infrahub.yml
.vale/styles/: spelling-exceptions.txt
.vale/styles/Infrahub/: sentence-case.yml  spelling.yml
checks/: common.py  leaf.py  loadbalancer.py
docs/: AGENTS.md
docs/docs/: developer-guide.mdx  enterprise.mdx  install.mdx  readme.mdx  service-catalog.mdx
generators/: common.py  generate_dc.py  generate_pop.py  generate_segment.py  schema_protocols.py
menus/: menu-full.yml
objects/bootstrap/: 04_manufacturers.yml  05_platforms.yml  06_device_types.yml  09_virtual_device_templates.yml  18_devices.yml
objects/lb/: 01_lb_templates.yml
queries/segment/: segment.gql
schemas/base/: dcim.yml
scripts/: bootstrap.py  create_proposed_change.py  create_users_roles.py  get_configs.py
service_catalog/: AGENTS.md  Home.py  pyrightconfig.json
service_catalog/pages/: 0_Dashboard.py  1_Create_DC.py  2_Create_VPN.py  3_Rack_Visualization.py
service_catalog/pages_disabled/: 3_VLAN_Management.py
service_catalog/tests/integration/: test_vlan_workflow.py
service_catalog/tests/unit/: test_vlan_management_api.py
service_catalog/utils/: api.py  config.py  rack.py  ui.py
templates/: clab_topology.j2  clab_topology_old.j2
templates/configs/: juniper_firewall.j2
templates/configs/edges/: cisco_nxos.j2
templates/configs/leafs/: arista_eos.j2  cisco_nxos.j2  dell_sonic.j2  juniper_junos.j2  sonic.j2
templates/configs/loadbalancers/: f5_networks_linux.j2  haproxy_technologies_linux.j2
templates/configs/peering/: arista_eos_bgp.j2  cisco_nxos_bgp.j2  cisco_nxos_ospf.j2
templates/configs/spines/: arista_eos.j2  cisco_nxos.j2  dell_sonic.j2  edgecore_sonic.j2  juniper_junos.j2  sonic.j2
tests/: AGENTS.md
tests/integration/: conftest.py  test_workflow.py
tests/integration/data/bootstrap/: 05_platforms.yml  06_device_types.yml
tests/integration/data/lb/: 00_device_type.yml  01_lb_templates.yml
tests/unit/: test_cloud_security_mock.py  test_j2_transforms.yml
tests/unit/simulators/: output.txt
transforms/: common.py  juniper_firewall.py  leaf.py  loadbalancer.py  openconfig_leaf.py  spine.py  topology_cabling.py
