[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Tomek Zajac", email = "tomek@mastuazi.com"},
    {name = "Pete Crocker", email = "pete@opsmill.com"},
]
requires-python = "<3.13,>3.10"
dependencies = [
    "infrahub-sdk[all]>=1.16.0b0,<2.0.0",
    "infrahub-testcontainers==1.6.0",
    "invoke<3.0.0,>=2.2.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-dependency>=0.6.0",
    "pytest-order>=1.3.0",
    "rich>=13.9.4",
    "ruff>=0.14.1",
    "types-pyyaml>=6.0.12.20250809",
    "types-requests>=2.32.0",
    "yamllint>=1.37.1",
]
name = "infrahub-bundle-dc"
version = "1.0.0"
description = "Design driven automation with Infrahub"
readme = "README.md"

[tool.setuptools]
packages = []

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["scripts/debug/"]

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "class"
filterwarnings = [
    "ignore:`background_execution` is deprecated:DeprecationWarning:infrahub_sdk.branch",
]
